# whisper_app

./: .gitignore  Dockerfile  README.md  api.py  auth.py  config.py  crud.py  docker-compose.yml  models.py  pyproject.toml  utils.py
db/: utils.py
input_modules/: file.py  telegram.py
output_modules/: notion.py
transcribe/: fasterwhisper.py
users/: models.py  router.py
